# japan_news_reader

./: BACKUP_main.css  Cargo.toml  Trunk.toml  attribution.md  build-debug.ps1  build-release.ps1  deployment_env.config  index.html  release-backend.ps1
scripts/: subgenre-dropdown_beforeload.js
src/: context.rs  main.rs  model.rs  routers.rs
src/components/: article_list.rs  article_view.rs  left_menu.rs  loading.rs  main_content.rs  mod.rs  navbar.rs  subgenre_button.rs
src/news_scraper/: jp_news.rs  mod.rs  top_news.rs
src/utils/: app_cache.rs  button_control.rs  mod.rs  nhkreader.rs
styles/: left-menu.css  main.css  subgenre-btn.css
