[package]
name = "scraper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
gloo = "0.11.0"
lazy_static = "1.5.0"
reqwasm = "0.5.0"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlDocument", "Window", "MediaQueryList", "HtmlElement", "Document"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"
yew-router = "0.18.0"
yewdux = "0.10.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
